--- a/index.html
+++ b/index.html
@@ -1,16 +1,95 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@oobservador_</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(to bottom, #0f0f1a, #1c1c2e);
+        color: #f0f0f0;
+        text-align: center;
+        padding: 0;
+      }
+      header {
+        padding: 60px 20px 40px;
+        background: rgba(0, 0, 0, 0.3);
+      }
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: 10px;
+      }
+      p.lead {
+        font-size: 1.2rem;
+        color: #d2d2ff;
+      }
+      section {
+        padding: 40px 20px;
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      h2 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+        color: #e0e0ff;
+      }
+      .btn {
+        display: inline-block;
+        margin: 10px;
+        padding: 10px 20px;
+        border-radius: 8px;
+        background: #6c63ff;
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        transition: background 0.3s;
+      }
+      .btn:hover {
+        background: #5751d9;
+      }
+      footer {
+        margin-top: 60px;
+        font-size: 0.9rem;
+        color: #888;
+      }
+    </style>
   </head>
-  <body style="font-family: sans-serif; text-align: center; padding: 40px;">
-    <h1>@oobservador_ - Desperte. Observe. Crie sua realidade.</h1>
-    <p>Em breve sua jornada estará no ar...</p>
-    <p><strong>Instagram:</strong> @oobservador_</p>
-    <p><strong>PIX:</strong> 54999279483</p>
-    <p><strong>E-mail:</strong> gabriiel_martins@hotmail.com</p>
+  <body>
+    <header>
+      <h1>@oobservador_</h1>
+      <p class="lead">Desperte. Observe. Crie sua realidade.</p>
+      <a class="btn" href="https://instagram.com/oobservador_" target="_blank">Instagram</a>
+      <a class="btn" href="mailto:gabriiel_martins@hotmail.com">Contato por e-mail</a>
+      <a class="btn" href="https://wa.me/554999279483" target="_blank">Doar via Pix</a>
+    </header>
+
+    <section>
+      <h2>Manifesto</h2>
+      <p>A mente cria histórias para nos prender à realidade atual. Ao observar os pensamentos, deixamos de ser controlados por eles. Meditação, desapego e imaginação consciente são as chaves para transcender a Matrix e criar a realidade desejada.</p>
+    </section>
+
+    <section>
+      <h2>Sobre o Observador</h2>
+      <p>Gabriel Martins, buscador da verdade, manifesta através da consciência uma nova realidade. Com base nas leis herméticas e no domínio da mente, compartilha reflexões que despertam e conectam almas em evolução.</p>
+    </section>
+
+    <section>
+      <h2>Textos e Reflexões</h2>
+      <p>Em breve, textos e insights sobre despertar, desapego, manifestação e consciência.</p>
+    </section>
+
+    <section>
+      <h2>Doações e Apoio</h2>
+      <p>Se esse conteúdo tocar sua alma, considere apoiar:</p>
+      <p><strong>PIX:</strong> 54999279483</p>
+      <p><strong>Email:</strong> gabriiel_martins@hotmail.com</p>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 @oobservador_ - Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
+update visual
