--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
       body {
         margin: 0;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(to bottom, #0f0f1a, #1c1c2e);
+        background: url('https://images.unsplash.com/photo-1541431488209-df4b019f4b4e') no-repeat center center fixed;
+        background-size: cover;
         color: #f0f0f0;
         text-align: center;
         padding: 0;
       }
       header {
         padding: 60px 20px 40px;
-        background: rgba(0, 0, 0, 0.3);
+        background: rgba(0, 0, 0, 0.5);
       }
       h1 {
         font-size: 2.5rem;
@@ -60,7 +61,7 @@
     <header>
       <h1>@oobservador_</h1>
       <p class="lead">Desperte. Observe. Crie sua realidade.</p>
-      <a class="btn" href="https://instagram.com/oobservador_" target="_blank">Instagram</a>
+      <a class="btn" href="https://instagram.com/oobservador.gm" target="_blank">Instagram</a>
       <a class="btn" href="mailto:gabriiel_martins@hotmail.com">Contato por e-mail</a>
       <a class="btn" href="https://wa.me/554999279483" target="_blank">Doar via Pix</a>
     </header>
@@ -92,4 +93,3 @@
     </footer>
   </body>
 </html>
-update visual
