--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE html><html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,6 +35,13 @@
         margin-bottom: 20px;
         color: #e0e0ff;
       }
+      .manifesto {
+        background: rgba(0, 0, 0, 0.8);
+        color: #fff;
+        padding: 40px;
+        border-radius: 10px;
+        backdrop-filter: blur(8px);
+      }
       .btn {
         display: inline-block;
         margin: 10px;
@@ -64,32 +70,31 @@
       <a class="btn" href="https://instagram.com/oobservador.gm" target="_blank">Instagram</a>
       <a class="btn" href="mailto:gabriiel_martins@hotmail.com">Contato por e-mail</a>
       <a class="btn" href="https://wa.me/554999279483" target="_blank">Doar via Pix</a>
-    </header>
+    </header><section class="manifesto">
+  <h2>Manifesto</h2>
+  <p>A mente cria histórias para nos prender à realidade atual. Ao observar os pensamentos, deixamos de ser controlados por eles. Meditação, desapego e imaginação consciente são as chaves para transcender a Matrix e criar a realidade desejada.</p>
+</section>
 
-    <section>
-      <h2>Manifesto</h2>
-      <p>A mente cria histórias para nos prender à realidade atual. Ao observar os pensamentos, deixamos de ser controlados por eles. Meditação, desapego e imaginação consciente são as chaves para transcender a Matrix e criar a realidade desejada.</p>
-    </section>
+<section>
+  <h2>Sobre o Observador</h2>
+  <p>Gabriel Martins, buscador da verdade, manifesta através da consciência uma nova realidade. Com base nas leis herméticas e no domínio da mente, compartilha reflexões que despertam e conectam almas em evolução.</p>
+</section>
 
-    <section>
-      <h2>Sobre o Observador</h2>
-      <p>Gabriel Martins, buscador da verdade, manifesta através da consciência uma nova realidade. Com base nas leis herméticas e no domínio da mente, compartilha reflexões que despertam e conectam almas em evolução.</p>
-    </section>
+<section>
+  <h2>Textos e Reflexões</h2>
+  <p>Em breve, textos e insights sobre despertar, desapego, manifestação e consciência.</p>
+</section>
 
-    <section>
-      <h2>Textos e Reflexões</h2>
-      <p>Em breve, textos e insights sobre despertar, desapego, manifestação e consciência.</p>
-    </section>
+<section>
+  <h2>Doações e Apoio</h2>
+  <p>Se esse conteúdo tocar sua alma, considere apoiar:</p>
+  <p><strong>PIX:</strong> 54999279483</p>
+  <p><strong>Email:</strong> gabriiel_martins@hotmail.com</p>
+</section>
 
-    <section>
-      <h2>Doações e Apoio</h2>
-      <p>Se esse conteúdo tocar sua alma, considere apoiar:</p>
-      <p><strong>PIX:</strong> 54999279483</p>
-      <p><strong>Email:</strong> gabriiel_martins@hotmail.com</p>
-    </section>
+<footer>
+  <p>&copy; 2025 @oobservador_ - Todos os direitos reservados.</p>
+</footer>
 
-    <footer>
-      <p>&copy; 2025 @oobservador_ - Todos os direitos reservados.</p>
-    </footer>
   </body>
 </html>
