--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       h1 {
         font-size: 2.5rem;
         margin-bottom: 10px;
+        color: #fff;
       }
       p.lead {
         font-size: 1.2rem;
@@ -29,6 +30,7 @@
         padding: 40px 20px;
         max-width: 800px;
         margin: 0 auto;
+        color: #fff;
       }
       h2 {
         font-size: 2rem;
@@ -41,6 +43,8 @@
         padding: 40px;
         border-radius: 10px;
         backdrop-filter: blur(8px);
+        font-size: 1.1rem;
+        line-height: 1.6;
       }
       .btn {
         display: inline-block;
